--- a/app/components/artwork.css
+++ b/app/components/artwork.css
@@ -5,12 +5,19 @@
     box-shadow: 0px 2px 3px rgb(130, 130, 130);
     display: flex;
     justify-content: end;
-    width: 250px;
-    height: 300px;
+    width: 100%;
+    height: 350px;
     border-radius: 5px;
     flex-direction: column;
     overflow: hidden;
     background: url(https://picsum.photos/300/300);
+}
+.awcontainer{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    padding: 10%;
+    padding-top: 0;
 }
 .awwrapper:hover{
     cursor: pointer;
@@ -46,4 +53,16 @@
 .awbottom h5{
     font-weight: normal;
     font-size: 10px;
+}
+@media(max-width:1200px) {
+    .awcontainer {
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+}
+@media(max-width:800px){
+    .awcontainer {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
 }
