--- a/app/components/artistcard.css
+++ b/app/components/artistcard.css
@@ -1,9 +1,8 @@
 .acwrapper {
     background-color: rgb(229, 229, 229);
     box-shadow: 0px 2px 3px rgb(130, 130, 130);
-    width: 100%;
-    height: 300px;
-
+    width: 250px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,56 +16,43 @@
 
 .acwrapper:hover {
     cursor: pointer;
-
 }
 
 .acpfp {
     z-index: 99;
-    transform: translate(0%, 50%);
     background-color: rgb(200, 200, 200);
-    position: absolute;
-    bottom: 40%;
-    width: 80px;
-    height: 80px;
+    width: 130px;
+    height: 130px;
     border-radius: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0px 2px 5px rgb(0, 0, 0);
 }
 
 .acbottom {
     background-color: white;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 40%;
+    height: 15%;
+}
+.actop{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .acbottom h4 {
-    position: absolute;
-    bottom: 35%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+
     color: black;
     font-weight: normal;
 }
 
-.accontainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 10%;
-    padding-top: 0;
-}
-
-@media(max-width:1000px) {
-    .accontainer {
-        grid-template-columns: repeat(3, 1fr);
-
-    }
-}
-@media(max-width:750px){
-    .accontainer {
-        grid-template-columns: repeat(2, 1fr);
-
-    }
-}
