--- a/app/components/artwork.css
+++ b/app/components/artwork.css
@@ -5,36 +5,18 @@
     box-shadow: 0px 2px 3px rgb(130, 130, 130);
     display: flex;
     justify-content: end;
-    width: 100%;
-    height: 350px;
+    width: 250px;
+    height: 400px;
     border-radius: 5px;
     flex-direction: column;
     overflow: hidden;
-    background: url(https://picsum.photos/300/300);
+
 }
-.awcontainer{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 10%;
-    padding-top: 0;
-}
+
 .awwrapper:hover{
     cursor: pointer;
 }
-.awtext{
-    position: absolute;
-    z-index: 100;
-    font-weight: normal;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
+
 .awbottom{
     display: flex;
     flex-direction: column;
@@ -42,27 +24,24 @@
     padding: 10px;
     padding-top: 5px;
     padding-bottom: 8px;
-    background-color: black;
-    color: white;
-    height: 20%;
+    background-color: white;
+    height: 15%;
     width: 100%;
+}
+.awtop{
+
+    position: relative; /* This is crucial for layout='fill' to work correctly */
+    width: 100%;
+    height: 100%; /* Set the height to the desired value */
+    overflow: hidden;
 }
 .awbottom h4{
     font-weight: normal;
+    text-decoration: none;
+    font-size: 16px;
 }
 .awbottom h5{
+    text-decoration: none;
     font-weight: normal;
-    font-size: 10px;
-}
-@media(max-width:1200px) {
-    .awcontainer {
-        grid-template-columns: repeat(3, 1fr);
-
-    }
-}
-@media(max-width:800px){
-    .awcontainer {
-        grid-template-columns: repeat(2, 1fr);
-
-    }
+    font-size: 12px;
 }
