--- a/app/homepage.css
+++ b/app/homepage.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 .welcomecontainer{
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,16 +11,12 @@
   box-shadow: 0px 1px 4px rgb(130, 130, 130);
   flex-direction: column;
   font-size: 21px;
-
   background: url('/grid.jpg');
   background-size: cover;
   background-position: center;
 
 }
-.splat{
-  position: absolute;
-  z-index: 0
-}
+
 .searchbarcontainer{
   width: 100%;
   height: 40px;
@@ -48,9 +43,21 @@
 .commstitle{
   padding: 10%;
   padding-top: 50px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
 }
 .commstitle h4{
   font-weight: normal;
   font-size: 21px;
+}
+.accontainer {
+  width: 100%;
+    position: absolute;
+    padding-left: 8%;
+    padding-right: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    justify-content: center;
+    gap: 10px;
 }
