--- a/app/personalPortfolio/personalPortfolio.css
+++ b/app/personalPortfolio/personalPortfolio.css
@@ -21,6 +21,7 @@
     border-radius: 5px;
     background-color: white;
     font-size: 16px;
+    cursor: pointer;
 }
 .portfoliobanner h4{
     text-align: center;
